의미 기반 HTTP 및 Realtime 응답 계약으로 분리